::bobwya		add more descriptive die messages, remove excess whitespace
::gentoo
-update patches version
-make better use of {PN}
-reduce unnecessary white-space
-add openh264
-screencast use flags
-update dependencies
-remove old code
-pgo is not locked to clang anymore
-improve binary support
-increase required disk space
-improve parallelism
-add new workarounds
-add missing metadata
::prototype99
-make better use of {PN}
-use a more compact way to disable elf-hack
-add dependency changes as per the release notes
-add mips support as debian&mozilla seems to believe it possible to some degree (as well as related patch)
-simplify dependencies with required_use
-remove more irrelevant version specific code

*firefox-77.0.1-r1
::gentoo		base ebuild
::bobwya
-add python3_6
-remove extra spaces
-add kde
-egl use flag
-add more informative die messages
-add rust version check for simd
-add pkg_default_pref_dir variable
::pg_overlay	improve python use flags, add dbus use flag, add lto use flags, remove more pre built code
::prototype99	remove release candidate specific code, remove esr specific code, make better use of PN, be more specific about when official patches are applied

*firefox-72.0.2

	3.2.2020	::bobwya
	-remove unnecessary quotes and spaces
	-update kde patch revision
	-improved patch logic
	-die messages
	-simplify ebuild through substitution
	-remove unnecessary empty lines
	-improved error handling
	3.2.2020	::gentoo		update year, update deps, fixes and patches
	3.2.2020	::pg_overlay
	-add lto use flags
	-privacy patchset
	-fix session restore (from debian)
	-no gtest patch (from debian)
	-MOZILA_DISABLE_PLUGIN patch (from debian)
	-add wayland, lto and pgo patches (from fedora)
	-no accessibility patch
	3.2.2020	::prototype99
	-use system harfbuzz/graphite2 patches from arch aur (firefox-kde-opensuse)
	-remove unnecessary moz_esr, and exotic version logic
	-remove unnecessary extra patches concatenation