@@ -423,7 +423,7 @@ DIST firefox-78.0.2.source.tar.xz 334406116 BLAKE2B ecddeee641a61409cf603afe97c3
 EBUILD firefox-70.0.1.ebuild 29924 BLAKE2B d4a849c6d5ccd1a68eb145c49a0275e03dbb115842e05981408d35f14c6e194426dace48d086930f9f2dc26bd00173591ff6fceb31cbb4770476440aa1942c27 SHA512 bec3ccf5df0fe6deb66a43071f6dd87b4835cbdcff4d1c18d1189cb57a6c8d79377bc6ddfbf3bcb82e5b6fb5f8cd6e3a69e9e7a7782ad7b0693e5838996dfa62
 EBUILD firefox-72.0.2.ebuild 30859 BLAKE2B 1310d943ff916479ce8ca23cfaf964845476f9c895ff05607422c35181b1f4e8b00a9882fe206e66bcb5fd2dfd717d504c9c8de5bd4b5e08b2c19c556716392c SHA512 bf907da507c542b300f64346ad5fad9c3070504091af4662dbf794e771737307b3b9442853ec6c40dbd1d25c7ef921bc5f136cbe4318268403aa2c7dbedc4677
 EBUILD firefox-77.0.1-r1.ebuild 32901 BLAKE2B fc71e6d793b90b0fc2aa22bb82c82fed337b15655b8fa39fc4aa68fdf1a53e69e1a4d8dace0656ba5b053ca11b39ff27cc464002801f7ac1ff0749d3027a2810 SHA512 68c57f8e41a99aec812d56d07aaf792ffd7bd6c7a7ca8bf64d48c521ef9a20cf6a3731213e3fa098e81104d376d8a5a7c948e813ef78fba92d082b26b555c61d
-EBUILD firefox-78.0.2-r1.ebuild 33874 BLAKE2B 41b29d5a7e8163da30451add176b74ea26242a4b7524864f0d5adbee1074051f5665cc8a9fc1084fe11f0853154d97cc049bcb63d14379e6028cbf66572cff11 SHA512 9d9176ad54944544bb839f997d9025cb8bb04466a5d0cd0c60ae7896a92bd01b6f312b982e5daa2cecbcd7eef0721232000c4b0da2c20a5a6dc9de48111a14b1
-MISC ChangeLog 2828 BLAKE2B 1891da362b27daa32dabf2523b41a51ac15ed71f801bec2055eceb22bdb44acf155a293575a419179dc3e71614d5618c46cc4a8f2d38fb24d91c2a882265a174 SHA512 1aad06f4df4891045673550cfb1b170bb7299833c779e47005f1c536972ca66fc311e6397ff1e589a3232be99b550f1520e6ccdf988bddea8364d9f4227a256d
+EBUILD firefox-78.0.2-r1.ebuild 34753 BLAKE2B 4196f4cc7b54ad7b9961a36b360bcc9d1ce2b90d70086b957652de15ab50f08b26a26335ad631ed93903415fdcbd6f86e67539af3734d6939481ef31f34556f4 SHA512 f28b41ef0053780c68cab3afb162c57101cd67c1dfb6d8dfaf88ee96a509b094b9d5310bf4c1ed0928771e648c3d0bdc3dc47e166cd50141b785288b720c16f2
+MISC ChangeLog 3004 BLAKE2B eaf64858f289837fb3b0eb9c3c3b79305252c81608b59137d4cf06a171b1d68e6e75d85cefd4fd7efcc851d47fdbdc7854574761e2a81557a2b05ae93af30c0e SHA512 e5d39ba79680dab44173e4ea5fa99d3fda5174fdbe24b102081371ac389cf7d792fa035deed9124dbae4b96667570e9d6a12315a54b86632519a56699d297d92
 MISC firefox-62.0-r2 22407 BLAKE2B f3bc12921a49d0d70e4d3c7eaa76ce5e659908099b5b43832f5558f7f6b3ec2042a91dcffd53930ff31710099fd332ebb6a44576936bcfa6d46b61637c4ae132 SHA512 82a2aa6f7e97d01b75b978f2c4da034df1d3315b994cdcc24f055df6b557e1b3bbd9c114616a1895a14672acc3620719c920e4021397d605949f14549db7e284
-MISC metadata.xml 2979 BLAKE2B e1e69d5325e4d7680530ef1d4615c62bdce6998b0c029967c69cad273abc69663f57dcb4caed3b082e73360086c240a1ff5c7a2c3aa82e282e17452dd251c0e4 SHA512 708cf4b326f4bb9b3f4e841e38983a224f9534593b01ada06eda496e4b36c68cae7f1c0da84741d72143d894bad69f242c106cd4fe4d5eacdec492f21236486d
+MISC metadata.xml 3061 BLAKE2B 57607805a61d814e32e58881d56d30f99b90afd217e032ee4f9cfac2de182130dcb5eb88cf4d2745c3dfaa0c56986272560ea9d59547931b2a393cf60cfb6582 SHA512 a9b4d9999819e74096db264a93b9e4bf1af9f577cf15dbe3092f2c3b467529d981489cce690b9763633a6239d1cc80e4614c39aad484279c6b460977ecbd5c10
